--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -404,7 +404,10 @@
         
         <footer>
             <p>&copy; 2025 SpendMind. All rights reserved.</p>
-            <p><a href="https://spendmind.co">Return to Home</a></p>
+            <p>
+                <a href="https://spendmind.co">Return to Home</a> | 
+                <a href="https://wajahathassan64.github.io/spendmind/terms-and-conditions.html">Terms and Conditions</a>
+            </p>
         </footer>
     </div>
 </body>
