Update internal links to use clean URLs without .html extension

--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -335,7 +335,7 @@
         <section>
             <h2>11. Privacy</h2>
             <p>Your use of the App is also governed by our Privacy Policy, which explains how we collect, use, and protect your information. By using the App, you consent to the collection and use of your information as described in the Privacy Policy.</p>
-            <p>Please review our Privacy Policy at: <a href="https://wajahathassan64.github.io/spendmind/privacy-policy.html">https://wajahathassan64.github.io/spendmind/privacy-policy.html</a></p>
+            <p>Please review our Privacy Policy at: <a href="https://wajahathassan64.github.io/spendmind/privacy-policy">https://wajahathassan64.github.io/spendmind/privacy-policy</a></p>
         </section>
         
         <section>
@@ -418,7 +418,7 @@
             <p>&copy; 2025 SpendMind. All rights reserved.</p>
             <p>
                 <a href="https://spendmind.co">Return to Home</a> | 
-                <a href="https://wajahathassan64.github.io/spendmind/privacy-policy.html">Privacy Policy</a>
+                <a href="https://wajahathassan64.github.io/spendmind/privacy-policy">Privacy Policy</a>
             </p>
         </footer>
     </div>
