--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -406,7 +406,7 @@
             <p>&copy; 2025 SpendMind. All rights reserved.</p>
             <p>
                 <a href="https://spendmind.co">Return to Home</a> | 
-                <a href="https://wajahathassan64.github.io/spendmind/terms-and-conditions.html">Terms and Conditions</a>
+                <a href="https://wajahathassan64.github.io/spendmind/terms-and-conditions">Terms and Conditions</a>
             </p>
         </footer>
     </div>
